# e-commerce

./: .gitignore
docs/system-design/: README.md
ecommerce-backend/: .dockerignore  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  API_ENDPOINTS.md  Dockerfile  Makefile  Pipfile  README.md  WEBSOCKETS.md  conftest.py  docker-compose.yml  pyproject.toml  requirements.txt  setup.cfg  sonar-project.properties
ecommerce-backend/.github/workflows/: ci.yml
ecommerce-backend/apps/content/: admin.py  models.py  serializers.py  urls.py  views.py
ecommerce-backend/apps/content/migrations/: 0001_initial.py
ecommerce-backend/apps/content/tests/: fixtures.py
ecommerce-backend/apps/finances/: admin.py  managers.py  notifications.py  serializers.py  signals.py  urls.py  urls_admin.py  views.py  views_admin.py  webhooks.py
ecommerce-backend/apps/finances/migrations/: 0001_initial.py
ecommerce-backend/apps/finances/services/: charges.py  customers.py  subscriptions.py
ecommerce-backend/apps/finances/tests/: factories.py  fixtures.py  test_admin_views.py  test_webhooks.py
ecommerce-backend/apps/integrations/: urls.py  views.py
ecommerce-backend/apps/integrations/openai/: client.py  types.py
ecommerce-backend/apps/integrations/services/: __init__.py  contentful_service.py  stripe_service.py
ecommerce-backend/apps/integrations/tests/: factories.py  fixtures.py  test_clients.py
ecommerce-backend/apps/multitenancy/: constants.py  middleware.py  models.py  notifications.py  serializers.py  tokens.py  urls.py  views.py
ecommerce-backend/apps/multitenancy/migrations/: 0001_initial.py  0002_alter_tenant_name.py  0003_alter_tenantmembership_unique_together_and_more.py  0004_auto_20240318_1003.py  0005_tenant_billing_email.py  0006_alter_tenantmembership_role.py  0007_tenantmembership_creator.py
ecommerce-backend/apps/multitenancy/services/: membership.py
ecommerce-backend/apps/multitenancy/tests/: factories.py  test_middleware.py  test_models.py  test_pipeline.py  test_serializers.py  test_tokens.py
ecommerce-backend/apps/notifications/: models.py  serializers.py  signals.py  views.py
ecommerce-backend/apps/tasks/: celery.py  content_tasks.py  email_tasks.py  notification_tasks.py  scheduler.py
ecommerce-backend/apps/users/: admin.py  models.py  notifications.py  serializers.py  strategy.py  tasks.py  urls.py  utils.py  views.py
ecommerce-backend/apps/websockets/: consumers.py
ecommerce-backend/common/: decorators.py  emails.py  middleware.py  models.py  tasks.py
ecommerce-backend/common/acl/: policies.py
ecommerce-backend/common/tests/: matchers.py  test_emails.py  test_tasks.py
ecommerce-backend/config/: asgi.py  celery.py  gunicorn.py  hosts.py  monitoring.py  routing.py  settings.py  urls_admin.py  urls_api.py
ecommerce-backend/scripts/runtime/: run_tests.sh
ecommerce-backend/utils/: hashid.py
(+53 files in other folders)
