[metadata]
name = ecommerce-backend
version = 1.0.0
description = E-Commerce Backend API with Django REST Framework
author = Your Name
author_email = your.email@example.com
license = MIT

[options]
packages = find:
python_requires = >=3.12
include_package_data = True

[options.packages.find]
exclude =
    tests*
    docs*

[flake8]
max-line-length = 120
exclude =
    .git,
    __pycache__,
    migrations,
    .venv,
    venv,
    build,
    dist
extend-ignore = E203, W503

[isort]
profile = black
line_length = 120
known_first_party = apps,common,config,utils
skip = migrations,.venv,venv

[tool:pytest]
DJANGO_SETTINGS_MODULE = config.settings
python_files = test_*.py *_test.py
addopts = -v --tb=short
testpaths = tests apps

[coverage:run]
source = apps
omit =
    */migrations/*
    */tests/*
    */__pycache__/*

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    raise NotImplementedError
    if __name__ == .__main__.:
show_missing = True
